--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>Animal's Wonderland</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    <nav>
+      <a href="/">Home</a>
+      &nbsp;|&nbsp
+      <a href="/zone">Zone Map</a>
+    </nav>
