--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,5 +8,5 @@
     <nav>
       <a href="/">Home</a>
       &nbsp;|&nbsp
-      <a href="/zone">Zone Map</a>
+      <a href="/zones">Zone Map</a>
     </nav>
