--- a/views/animal-zones/zone.ejs
+++ b/views/animal-zones/zone.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
     <h1><%= zone %></h1>
-    <div><a><%= animals %></a></div>
+    <div><a><%= zone %></a></div>
     
     
 <%- include('../partials/footer') %>
