--- a/views/animal-zones/zones.ejs
+++ b/views/animal-zones/zones.ejs
@@ -1,8 +1,8 @@
 <%- include('../partials/header') %>
-    <div><a>African Animals</a></div>
-    <div><a>Australian Animals</a></div>
-    <div><a>Mountain Animals</a></div>
-    <div><a>Aquatic Animals</a></div>
-    <div><a>Animals in Cold Regions</a></div>
+    <div><a href="/zones/african-animals">African Animals</a></div>
+    <div><a href="/zones/australian-animals">Australian Animals</a></div>
+    <div><a href="/zones/mountain-animals">Mountain Animals</a></div>
+    <div><a href="/zones/aquatic-animals">Aquatic Animals</a></div>
+    <div><a href="/zones/animals-in-cold-regions">Animals in Cold Regions</a></div>
     
 <%- include('../partials/footer') %>
