show animal page

--- a/views/animal-zones/animal.ejs
+++ b/views/animal-zones/animal.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
-    <h1><%= zone %></h1>
-    <div><a><%= animals %></a></div>
+    <h1><%= animal %></h1>
+    
     
     
 <%- include('../partials/footer') %>
