WIP add show info for animal page

--- a/views/animal-zones/animal.ejs
+++ b/views/animal-zones/animal.ejs
@@ -1,5 +1,12 @@
 <%- include('../partials/header') %>
-    <h1><%= animal %></h1>
+    <h1><%= animal.name %></h1>
+    <div>
+        <% shows.forEach(function(show){ %>
+            <div>
+                <%= show.name %>
+            </div>
+        <% }) %>
+    </div>
     
     
     
