change animal zone name

--- a/views/animal-zones/zones.ejs
+++ b/views/animal-zones/zones.ejs
@@ -1,8 +1,8 @@
 <%- include('../partials/header') %>
-    <div><a href="/zones/african-animals">African Animals</a></div>
-    <div><a href="/zones/australian-animals">Australian Animals</a></div>
-    <div><a href="/zones/mountain-animals">Mountain Animals</a></div>
-    <div><a href="/zones/aquatic-animals">Aquatic Animals</a></div>
-    <div><a href="/zones/animals-in-cold-regions">Animals in Cold Regions</a></div>
+    <div><a href="/zones/African Animals">African Animals</a></div>
+    <div><a href="/zones/Australian Animals">Australian Animals</a></div>
+    <div><a href="/zones/Mountain Animals">Mountain Animals</a></div>
+    <div><a href="/zones/Aquatic Animals">Aquatic Animals</a></div>
+    <div><a href="/zones/Animals in Cold Region">Animals in Cold Regions</a></div>
     
 <%- include('../partials/footer') %>
