--- a/views/animal-zones/animal.ejs
+++ b/views/animal-zones/animal.ejs
@@ -1,5 +1,6 @@
 <%- include('../partials/header') %>
     <h1><%= animal.name %></h1>
+    <img src="<%= `/images/animals/${animal.name}.png` %>"/>
     <div>
         <% shows.forEach(function(show){ %>
             <div>
