--- a/views/animal-zones/animal-show.ejs
+++ b/views/animal-zones/animal-show.ejs
@@ -4,7 +4,9 @@
     <div>
         <%= show.description %>
     </div>
-    <h3>Book this show</h3>
-   
-    
+    <% if(user) { %>
+        <h3>Book this show</h3>
+    <% } else { %>
+        <h3>Please log in to make your booking</h3>
+    <% } %>
 <%- include('../partials/footer') %>
