--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,4 +9,9 @@
       <a href="/">Home</a>
       &nbsp;|&nbsp
       <a href="/zones">Zone Map</a>
+      <% if(user) { %>
+        <a href="/logout">LOG OUT</a>
+      <% } else { %>
+        <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
+      <% } %>
     </nav>
