--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,10 @@
       &nbsp;|&nbsp
       <a href="/zones">Zone Map</a>
       <% if(user) { %>
+        <div id="auth">
+          (<strong><%= user.userName %></strong>)
         <a href="/logout">LOG OUT</a>
+        </div>
       <% } else { %>
         <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
       <% } %>
