--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,11 +10,13 @@ a {
 
 .login {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 34px;
 }
 
 .login img {
-  height: 30px;
+  height: 20px;
+  padding-left: 0.5rem;
+}
+nav {
+  display: flex;
+  justify-content: space-between;
 }
