--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,9 +6,12 @@
   </head>
   <body>
     <nav>
-      <a href="/">Home</a>
-      &nbsp;|&nbsp
-      <a href="/zones">Zone Map</a>
+      <div>
+        <a href="/">Home</a>
+        &nbsp;|&nbsp
+        <a href="/zones">Zone Map</a>
+      </div>
+    <div>
       <% if(user) { %>
         <div id="auth">
           (<strong><%= user.userName %></strong>)
@@ -17,4 +20,5 @@
       <% } else { %>
         <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
       <% } %>
+      </div>
     </nav>
