add edit feature

--- a/views/bookings/edit.ejs
+++ b/views/bookings/edit.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 <h1>Edit Your Booking Details</h1>
-<form action="/bookings/<%= booking._id %>" method="PUT">
+<form action="/bookings/<%= booking._id %>/edit?_method=PUT" method="POST">
     <div>
     <label>Pick a show date
         <input type="date" name="showDate" value="<%= booking.showDate.toLocaleDateString() %>" required>
