--- a/views/bookings/edit.ejs
+++ b/views/bookings/edit.ejs
@@ -3,7 +3,7 @@
 <form action="/bookings/<%= booking._id %>/edit?_method=PUT" method="POST">
     <div>
     <label>Pick a show date
-        <input type="date" name="showDate" value="<%= booking.showDate.toLocaleDateString() %>" required>
+        <input type="date" name="showDate" value="<%= booking.showDate.toISOString().split('T')[0] %>" required>
     </label>
     </div>
     <div>
