--- a/views/bookings/index.ejs
+++ b/views/bookings/index.ejs
@@ -9,7 +9,7 @@
         </div>
         <div>
             Show Date: 
-            <%= b.showDate.toLocaleDateString() %>
+            <%= b.showDate.toLocaleDateString('en-au') %>
         </div>
         <div>
         Number of Adults: 
