add & display show time

--- a/views/animal-zones/animal-show.ejs
+++ b/views/animal-zones/animal-show.ejs
@@ -3,6 +3,7 @@
     <h2>About this show</h2>
     <div>
         <%= show.description %>
+        This show is on <%= show.timeOfDay %> everyday.
     </div>
     <% if(user) { %>
         <h3>Your Booking Details: </h3>
