--- a/views/bookings/index.ejs
+++ b/views/bookings/index.ejs
@@ -1,5 +1,6 @@
 <%- include('../partials/header') %>
 <h1>Your Booking Details</h1>
+<h4>Each of our animal shows are held daily. Please understand that animals need to rest well to give the best performance at each show.</h4>
 <% if(bookings.length > 0) { %>
     <% bookings.forEach(function(b, index) { %>
         <div>Booking <%= index + 1 %></div>
@@ -12,8 +13,12 @@
             <%= b.showDate.toLocaleDateString('en-au') %>
         </div>
         <div>
-        Number of Adults: 
-        <%= b.numberOfAdults %>
+            Show Time:
+            <%= b.animalShow.timeOfDay %>
+        </div>
+        <div>
+            Number of Adults: 
+            <%= b.numberOfAdults %>
         </div>
         <div>
             Number of Children: 
