--- a/views/animal-zones/animal.ejs
+++ b/views/animal-zones/animal.ejs
@@ -6,7 +6,7 @@
         <% if(shows.length > 0) { %>
         <% shows.forEach(function(show){ %>
             <div id="show-name"><p>We are on this show. Click below for show details and booking: </p>
-                <a href="<%=`/zones/${zone}/${animal.name}/${show.name}`%>"><%= show.name %></a>
+                <a href="<%=`/shows/${show._id}`%>"><%= show.name %></a> 
             </div>
         <% }) %>
         <% } %>
