--- a/views/bookings/index.ejs
+++ b/views/bookings/index.ejs
@@ -1,12 +1,12 @@
 <%- include('../partials/header') %>
 <h1>Your Booking Details</h1>
-<h4>Each of our animal shows are held daily. Please understand that animals need to rest well to give the best performance at each show.</h4>
+<h4>Each of our animal shows are held daily. Please understand that animals need to rest well to give the best performance in each show.</h4>
 <% if(bookings.length > 0) { %>
     <% bookings.forEach(function(b, index) { %>
         <div>Booking <%= index + 1 %></div>
         <div>
             Show Name: 
-            <a href="/zones/<%= b.animalShow.zone %>/<%= b.animalShow.animal.name %>/<%= b.animalShow.name %>"><%= b.animalShow.name %></a>
+            <a href="/shows/<%= b.animalShow._id %> %>"><%= b.animalShow.name %></a>
         </div>
         <div>
             Show Date: 
