--- a/views/animal-zones/zones.ejs
+++ b/views/animal-zones/zones.ejs
@@ -1,8 +1,13 @@
 <%- include('../partials/header') %>
-    <div><a href="/zones/African Animals">African Animals</a></div>
-    <div><a href="/zones/Australian Animals">Australian Animals</a></div>
-    <div><a href="/zones/Mountain Animals">Mountain Animals</a></div>
-    <div><a href="/zones/Aquatic Animals">Aquatic Animals</a></div>
-    <div><a href="/zones/Animals in Cold Region">Animals in Cold Regions</a></div>
-    
+    <div class="zones">    
+        <div class="zone"><a href="/zones/African Animals">African Animals</a></div>
+        <div class="zone"><a href="/zones/Australian Animals">Australian Animals</a></div>
+    </div>
+    <div class="zones">
+        <div class="zone"><a href="/zones/Mountain Animals">Mountain Animals</a></div>
+    </div>
+    <div class="zones">
+        <div class="zone"><a href="/zones/Aquatic Animals">Aquatic Animals</a></div>    
+        <div class="zone"><a href="/zones/Animals in Cold Region">Animals in Cold Regions</a></div>
+    </div>   
 <%- include('../partials/footer') %>
