--- a/views/bookings/index.ejs
+++ b/views/bookings/index.ejs
@@ -1,8 +1,10 @@
 <%- include('../partials/header') %>
 <h1>Your Booking Details</h1>
 <h4>Each of our animal shows are held daily. Please understand that animals need to rest well to give the best performance in each show.</h4>
+<div class="booking-container">
 <% if(bookings.length > 0) { %>
     <% bookings.forEach(function(b, index) { %>
+        <div class="bookings">
         <div>Booking <%= index + 1 %></div>
         <div>
             Show Name: 
@@ -32,6 +34,8 @@
         <form action="/bookings/<%= b._id %>?_method=DELETE" method="POST">
             <button type="submit">Delete</button>
         </form>
+        </div>
     <% }) %>
 <% } %>
+</div>
 <%- include('../partials/footer') %>
