--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,9 @@
-    <%- include('./partials/header') %>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <%- include('./partials/footer') %>
+<%- include('./partials/header') %>
+<div class="home-container">
+    <div class="home-contents">
+        <h1><%= title %></h1>
+        <p>Welcome to <%= title %></p>
+        <div id="entry"><a href="/zones">Enter the Wonderland!</a></div>
+    </div>
+</div>
+<%- include('./partials/footer') %>
