--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -50,6 +50,8 @@ nav {
   align-content: center;
 }
 .animal-content {
+  display: flex;
+  flex-direction: column;
   max-width: 50rem;
   min-width: 15rem;
 }
@@ -62,9 +64,12 @@ nav {
 }
 .bookings {
   justify-content: space-between;
-  max-width: 20rem;
+  width: 20rem;
   padding: 0.5rem;
   margin: 0.5rem;
+  border: 1px solid #3A4D39;
+  background-color: #ECE3CE;
+  border-radius: 1rem;
 }
 .home-container {
   display: flex;
