--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -67,7 +67,7 @@ nav {
   width: 20rem;
   padding: 0.5rem;
   margin: 0.5rem;
-  border: 1px solid #3A4D39;
+  border: 1px solid #739072;
   background-color: #ECE3CE;
   border-radius: 1rem;
 }
@@ -90,4 +90,7 @@ nav {
 #entry > a {
   color: white;
   text-decoration: none;
+}
+.error {
+  color: red;
 }
