--- a/views/animal-zones/zones.ejs
+++ b/views/animal-zones/zones.ejs
@@ -1,5 +1,6 @@
 <%- include('../partials/header') %>
-    <div class="zones">    
+<div class="zones-container">    
+<div class="zones">    
         <div class="zone"><a href="/zones/African Animals">African Animals</a></div>
         <div class="zone"><a href="/zones/Australian Animals">Australian Animals</a></div>
     </div>
@@ -9,5 +10,6 @@
     <div class="zones">
         <div class="zone"><a href="/zones/Aquatic Animals">Aquatic Animals</a></div>    
         <div class="zone"><a href="/zones/Animals in Cold Region">Animals in Cold Regions</a></div>
-    </div>   
+    </div> 
+</div>  
 <%- include('../partials/footer') %>
