--- a/views/animal-zones/zones.ejs
+++ b/views/animal-zones/zones.ejs
@@ -1,15 +1,15 @@
 <%- include('../partials/header') %>
 <div class="zones-container">    
 <div class="zones">    
-        <div class="zone"><a href="/zones/African Animals">African Animals</a></div>
-        <div class="zone"><a href="/zones/Australian Animals">Australian Animals</a></div>
+        <a class="zone" href="/zones/African Animals">African Animals</a>
+        <a class="zone" href="/zones/Australian Animals">Australian Animals</a>
     </div>
     <div class="zones">
-        <div class="zone"><a href="/zones/Mountain Animals">Mountain Animals</a></div>
+        <a class="zone" href="/zones/Mountain Animals">Mountain Animals</a>
     </div>
     <div class="zones">
-        <div class="zone"><a href="/zones/Aquatic Animals">Aquatic Animals</a></div>    
-        <div class="zone"><a href="/zones/Animals in Cold Region">Animals in Cold Regions</a></div>
+        <a class="zone" href="/zones/Aquatic Animals">Aquatic Animals</a>    
+        <a class="zone" href="/zones/Animals in Cold Region">Animals in Cold Regions</a>
     </div> 
 </div>  
 <%- include('../partials/footer') %>
