fix photo layout

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
     <div class="home-contents">
         <h1><%= title %></h1>
         <p>Welcome to <%= title %></p>
-        <div id="entry"><a href="/zones">Enter the Wonderland!</a></div>
+        <a id="entry" href="/zones">Enter the Wonderland!</a>
         <div class="weather-fcst">
             <h4>Weather in the Wonderland</h4>
             <% days.forEach(function(day, index){ %>
