--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -41,13 +41,10 @@ nav {
 .zones {
   display: flex;
   justify-content: space-around;
-  align-content: center;
 }
 .animals {
   display: flex;
   justify-content: center;
-  align-content: center;
- 
 }
 .zone, .animal {
   padding: 5rem;
@@ -65,11 +62,11 @@ a.zone, a.animal {
 .animal-container {
   display: flex;
   justify-content: center;
-  align-content: center;
 }
 .animal-content {
   display: flex;
   flex-direction: column;
+  align-items: center;
   max-width: 50rem;
   min-width: 15rem;
 }
@@ -91,7 +88,6 @@ a.zone, a.animal {
 .home-container {
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 .home-contents {
   display: flex;
@@ -102,7 +98,6 @@ a.zone, a.animal {
 .weather {
   display: flex;
   justify-content: center;
-  align-items: center;
   padding: 0.3rem;
 }
 .weather-fcst {
@@ -128,7 +123,7 @@ a.zone, a.animal {
   border-radius: 1.5rem;
   font-weight: 700;
 }
-#entry > a {
+ a#entry {
   color: white;
   text-decoration: none;
 }
